verify_c1_output_5.txt
C:\Spare Parts\Project\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: Ô¿» Unable to compile TypeScript:
src/finance/chargebacks.service.ts(40,38): error TS2345: Argument of type 'DeliveryExceptionType' is not assignable to parameter of type '"DAMAGED_IN_TRANSIT" | "LOST_IN_TRANSIT"'.
  Type '"OTHER"' is not assignable to type '"DAMAGED_IN_TRANSIT" | "LOST_IN_TRANSIT"'.

    at createTSError (C:\Spare Parts\Project\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Spare Parts\Project\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Spare Parts\Project\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Spare Parts\Project\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Spare Parts\Project\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1893:10
    at Object.require.extensions.<computed> [as .ts] (C:\Spare Parts\Project\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 2345 ]
}
